--- a/css/style.css
+++ b/css/style.css
@@ -2159,6 +2159,7 @@ nav {
 .image-text {
     font-size: 22px;
 }
+}
 
 .banner {
   padding: 130px 0 0;
@@ -2286,8 +2287,3 @@ nav {
 .side-nav {
   background-color: #f1f1f1;
 }
-
-
-
-
-
