--- a/css/style.css
+++ b/css/style.css
@@ -2274,6 +2274,10 @@ nav {
   color: black;
 }
 
+.well li a:hover, .well li:focus {
+  color: #ffffff;
+}
+
 .well p {
   padding: 5px 5px;
   color:black;
@@ -2287,3 +2291,26 @@ nav {
 .side-nav {
   background-color: #f1f1f1;
 }
+
+.cont-flex {
+  display: flex;
+  justify-content: space-between;
+  
+}
+
+@media (max-width:480px) {
+  .cont-flex {
+    flex-direction: column;
+  }
+
+  .img-cont {
+    margin: 0 auto;
+  }
+}
+
+@media (min-width:481px) {
+  .img-cont {
+    width: 30%;
+  }
+}
+
