--- a/css/style.css
+++ b/css/style.css
@@ -6,6 +6,7 @@ body {
   -webkit-font-smoothing: antialiased;
 }
 
+
 h1,
 h2,
 h3,
@@ -2357,4 +2358,24 @@ nav {
 
 .img-resp {
   max-width: 100%;
+}
+
+a {
+  color: #a77877;
+}
+
+/* Responsive I-frame */
+.resp-container {
+  position: relative;
+  overflow: hidden;
+  padding-top: 56.25%;
+}
+
+.resp-iframe {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  border: 0;
 }
